--- a/packages/pancake-uikit/package.json
+++ b/packages/pancake-uikit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@pancakeswap-libs/uikit",
   "description": "Set of UI components for pancake projects",
+  "version": "1.0.2",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
